# airplane-tracker

./: .flake8  .gitignore  README.md  main.py  pyproject.toml  test_api.py
src/: abstract_api.py  abstract_file_saver.py  aeroplane.py  aeroplane_api.py  json_saver.py  utils.py
tests/: test_abstract_classes.py  test_aeroplane.py  test_aeroplane_api.py  test_aeroplane_extra.py  test_json_saver.py  test_utils.py
