[tool.poetry]
name = "airplane-tracker"
version = "0.1.0"
description = "Система отслеживания самолетов с использованием API OpenSky Network"
authors = ["HapkoM"]
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.31.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
flake8 = "^6.1.0"
black = "^23.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "-v --cov=src --cov-report=term-missing --cov-report=html"
testpaths = ["tests"]

[tool.black]
line-length = 100
target-version = ['py39']

[tool.flake8]
max-line-length = 100
exclude = [".git", "__pycache__", "build", "dist"]